// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mongodb - a user can confirm enable 2fa on her account 1`] = `
Object {
  "message": "Two factor authentication has been enabled.",
}
`;

exports[`mongodb - a user can disable 2fa on her account 1`] = `
Object {
  "message": "Two factor auth has been disabled.",
}
`;

exports[`mysql - a user can confirm enable 2fa on her account 1`] = `
Object {
  "message": "Two factor authentication has been enabled.",
}
`;

exports[`mysql - a user can disable 2fa on her account 1`] = `
Object {
  "message": "Two factor auth has been disabled.",
}
`;

exports[`pg - a user can confirm enable 2fa on her account 1`] = `
Object {
  "message": "Two factor authentication has been enabled.",
}
`;

exports[`pg - a user can disable 2fa on her account 1`] = `
Object {
  "message": "Two factor auth has been disabled.",
}
`;

exports[`sqlite - a user can confirm enable 2fa on her account 1`] = `
Object {
  "message": "Two factor authentication has been enabled.",
}
`;

exports[`sqlite - a user can disable 2fa on her account 1`] = `
Object {
  "message": "Two factor auth has been disabled.",
}
`;

exports[`sqlite3 - a user can confirm enable 2fa on her account 1`] = `
Object {
  "message": "Two factor authentication has been enabled.",
}
`;

exports[`sqlite3 - a user can disable 2fa on her account 1`] = `
Object {
  "message": "Two factor auth has been disabled.",
}
`;
